fixed spacing

--- a/resources/css/styles4K.css
+++ b/resources/css/styles4K.css
@@ -55,7 +55,7 @@
     -fx-font-size: 18pt;
 }
 
-.homeButtonBoxes {
+.contentBox {
     -fx-spacing: 20px;
 }
 
